<resources>
    <string name="app_name">LogisticsNegotium</string>
    <string name="hello_world">Hello World! PÁGINA 133 (até 148)</string>
    <string name="titulo">Informe seu nome</string>
    <string name="title_main">Bem-vindo(a) ao LogisticsNegotium!</string>
    <string name="title_choose_your_option">\n\nEscolha a sua opção:</string>
    <string name="title_button_calculate_best_vehicle">Calcular o melhor veículo</string>
    <string name="title_button_add_vehicle">Adicionar um novo veículo</string>
    <string name="title_add_vehicle">Informe os dados para o cadastro do veículo:\n\n</string>
    <string name="title_add_id">Id:</string>
    <string name="title_add_capacity">Capacidade:</string>
    <string name="title_add_latitude">Latitude:</string>
    <string name="title_add_longitude">Longitude:</string>
    <string name="title_add_isAirVehicle">É um veículo aéreo: 0 para não, 1 para sim:</string>
    <string name="surpreenda_me">Surpreenda-me</string>
    <string name="insertVehicle">Inserir veículo!</string>
    <string name="saudacao">Olá</string>
    <string name="title_activity_main">LogisticsNegotium</string>
    <string name="added_successfully">Veículo adicionado com sucesso!</string>
    <string name="failed_to_add">Falha ao adicionar o veículo!</string>
</resources>



