<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--https://stackoverflow.com/questions/2712761/edittext-inputtype-values-xml-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_vehicle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_id" />

    <EditText
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" >
        <requestFocus />
    </EditText>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_capacity" />

    <EditText
        android:id="@+id/capacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" >
        <requestFocus />
    </EditText>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_latitude" />

    <EditText
        android:id="@+id/latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" >
        <requestFocus />
    </EditText>


    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/title_add_longitude" />

    <EditText
        android:id="@+id/longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" >
        <requestFocus />
    </EditText>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_isAirVehicle" />

    <EditText
        android:id="@+id/isAirVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" >
        <requestFocus />
    </EditText>


    <Button
        android:id="@+id/saudacaoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/insertVehicle"
        android:onClick="insertVehicleEvent"/>

</LinearLayout>