<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--https://developer.android.com/training/basics/firstapp/starting-activity-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/title_main"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/title_choose_your_option"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:id="@+id/calculateBestVehicleButton"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:onClick="callNewVehicleActivity"
        android:text="@string/title_button_calculate_best_vehicle" />

    <Button
        android:id="@+id/addVehicleButton"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:onClick="callNewVehicleActivity"
        android:text="@string/title_button_add_vehicle" />




</LinearLayout>